// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Clicked 1`] = `
<div
  className="BTN_CLICKED"
>
  <button
    aria-label="button-1"
    className="button BTN_CLICKED"
    id="button-1"
    onClick={[Function]}
  >
    clicked
  </button>
</div>
`;

exports[`Storyshots Button Default 1`] = `
<div
  className="BTN_DEFAULT"
>
  <button
    aria-label="button-1"
    className="button BTN_DEFAULT"
    id="button-1"
    onClick={[Function]}
  >
    default
  </button>
</div>
`;

exports[`Storyshots Button Disabled 1`] = `
<div
  className="BTN_DISABLED"
>
  <button
    aria-label="button-1"
    className="button BTN_DISABLED"
    id="button-1"
    onClick={[Function]}
  >
    disabled
  </button>
</div>
`;

exports[`Storyshots Button Warning 1`] = `
<div
  className="BTN_WARNING"
>
  <button
    aria-label="button-1"
    className="button"
    id="button-1"
    onClick={[Function]}
  >
    warning
  </button>
</div>
`;
